--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ryanburnette/mysql-dump-s3-sync",
-  "version": "1.1.0",
-  "description": "Scheduled service that dumps a MySQL database and syncs it to an AWS S3.",
+  "version": "2.0.0",
+  "description": "Dump a MySQL database and sync the backup to AWS S3.",
   "main": "index.js",
   "scripts": {
     "backup": "node index.js"
@@ -14,9 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@root/mkdirp": "^1.0.0",
+    "@ryanburnette/parse-mysql-url": "^1.1.0",
     "aws-sdk": "^2.517.0",
     "date-fns": "^1.30.1",
-    "dotenv": "^8.1.0",
     "node-cron": "^2.0.3"
   }
 }
