--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ryanburnette/mysql-dump-s3-sync",
-  "version": "2.0.0",
+  "version": "2.0.0-beta.0",
   "description": "Dump a MySQL database and sync the backup to AWS S3.",
   "main": "index.js",
   "scripts": {
