--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dump a MySQL database and sync the backup to AWS S3.",
   "main": "index.js",
   "bin": {
-    "backup": "node lib/backup-run.js"
+    "backup": "node backup.js"
   },
   "repository": {
     "type": "git",
