--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@ryanburnette/mysql-dump-s3-sync",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0-beta.3",
   "description": "Dump a MySQL database and sync the backup to AWS S3.",
   "main": "index.js",
   "bin": {
-    "backup": "node backup.js"
+    "backup": "./backup.js"
   },
   "repository": {
     "type": "git",
